@@ -315,6 +315,9 @@ enum TrigBit
   BIT_e18vh_medium1,
   BIT_mu15,
 
+  // MissingEt trigger
+  BIT_2mu8_EFxe40wMu_tclcw
+
   N_TRIG
 };
 
@@ -360,6 +363,9 @@ const uint TRIG_tau20_medium1_mu15              = 1<<BIT_tau20_medium1_mu15;
 // Missing trigger flags for lep-tau matching
 const uint TRIG_e18vh_medium1           = 1<<BIT_e18vh_medium1;
 const uint TRIG_mu15                    = 1<<BIT_mu15;
+
+// Missing ET trigger(s)
+const uint TRIG_2mu8_EFxe40wMu_tclcw    = 1<<BIT_2mu8_EFxe40wMu_tclcw;
 
 // Trigger chain names, for convenience
 stringvector getTrigChains();
