@@ -1,5 +1,8 @@
 # vim: set noexpandtab:
 
+2013-01-20 Steve
+	* Added EF_2mu8_EFxe40wMu_tclcw trigger
+
 2013-01-17 Steve
 	* Adding missing triggers for lep-tau trigger matching: EF_e18vh_medium1, EF_mu15
 	* Adding pileup weight for periods I,L
